Final submitted version.

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -62,45 +62,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# All imports collected in a single place\n",
-    "\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from glob import glob\n",
-    "import cv2                \n",
-    "import matplotlib.pyplot as plt  \n",
-    "from tqdm import tqdm\n",
-    "from PIL import Image, ImageFile\n",
-    "import torch\n",
-    "from torch import utils\n",
-    "import torchvision.models as models\n",
-    "from torchvision import datasets\n",
-    "import torchvision.transforms as transforms\n",
-    "from torch.autograd import Variable\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check if CUDA is available\n",
-    "use_cuda = torch.cuda.is_available()\n",
-    "\n",
-    "# solves: OSError: image file is truncated (150 bytes not processed)\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -128,7 +89,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<a id='step1'></a>\n",
     "## Step 1: Detect Humans\n",
@@ -237,7 +202,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Answer:__ \n",
     "(You can print out your results and/or write your percentages in this cell)"
@@ -246,7 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def assess_face_detector(human_files, dog_files): \n",
@@ -265,7 +238,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -292,7 +269,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on `human_files_short` and `dog_files_short`."
    ]
@@ -361,7 +342,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### (IMPLEMENTATION) Making Predictions with a Pre-trained Model\n",
     "\n",
@@ -373,7 +358,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -423,7 +412,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -442,7 +435,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### (IMPLEMENTATION) Write a Dog Detector\n",
     "\n",
@@ -481,7 +478,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Answer:__ \n"
    ]
@@ -489,7 +490,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
@@ -509,7 +514,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -528,7 +537,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We suggest VGG-16 as a potential network to detect dog images in your algorithm, but you are free to explore other pre-trained networks (such as [Inception-v3](http://pytorch.org/docs/master/torchvision/models.html#inception-v3), [ResNet-50](http://pytorch.org/docs/master/torchvision/models.html#id3), etc).  Please use the code cell below to test other pre-trained PyTorch models.  If you decide to pursue this _optional_ task, report performance on `human_files_short` and `dog_files_short`."
    ]
@@ -652,7 +665,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Answer**:\n",
     "\n",
@@ -694,7 +711,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -747,7 +768,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -773,24 +798,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Answer:__ \n",
     "\n",
-    "I decided to use a sequence of convolutional layers with MaxPooling layers between in order to increase the depth of the layers while reducing the x and y dimensions. This architecture should be able to detect more and more abstract features within the later layers. I started with a sequence of 3 layers, but increased the number to 5 layers in order to get better classification results. A 3x3 kernel was always used. \n",
+    "I decided to use a sequence of convolutional layers with MaxPooling layers between in order to increase the depth of the layers while reducing the x and y dimensions. This architecture should be able to detect more and more abstract features within the later layers. I started with a sequence of 3 layers, but increased the number to 5 layers in order to get better classification results. A 3x3 kernel was always used.\n",
     "\n",
     "After the sequence of convolutional layers the image is flattened. The flatttenend input is passed to a fully connected layer with 1024 neurons that acts similar to a hidden layer before the output of this hidden layer is passed to a fully connected output layer with 133 output features. \n",
     "\n",
     "Since I could observe a significant amout of overfitting a dropout layer was added. \n",
     "\n",
-    "All layers have a ReLU activiation, except the last layer.\n"
+    "All layers have a ReLU activiation, except the last layer. The main advantage of using the ReLU function is that it does not activate all the neurons at the same time. Since there were no signs of dead neurons (the main disadvantage of ReLU) there was no need to switch to LeakyRelu. (https://medium.com/@danqing/a-practical-guide-to-relu-b83ca804f1f7)\n"
    ]
   },
   {
@@ -805,7 +838,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
@@ -838,7 +875,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# solves: OSError: image file is truncated (150 bytes not processed)\n",
@@ -1029,7 +1070,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### (IMPLEMENTATION) Test the Model\n",
     "\n",
@@ -1147,7 +1192,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1246,14 +1295,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Answer:__ \n",
     "\n",
@@ -1274,7 +1331,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "criterion_transfer = nn.CrossEntropyLoss()\n",
@@ -1285,7 +1346,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def train(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path):\n",
@@ -1386,7 +1451,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### (IMPLEMENTATION) Train and Validate the Model\n",
     "\n",
@@ -1490,7 +1559,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "### TODO: Write a function that takes a path to an image as input\n",
@@ -1533,6 +1606,8 @@
     }
    ],
    "source": [
+    "# Testing the pedict_breed_transfer function\n",
+    "\n",
     "print(predict_breed_transfer('/data/dog_images/test/001.Affenpinscher/Affenpinscher_00003.jpg'))\n",
     "print(predict_breed_transfer('/data/dog_images/test/071.German_shepherd_dog/German_shepherd_dog_04931.jpg'))\n",
     "print(predict_breed_transfer('/data/dog_images/test/021.Belgian_sheepdog/Belgian_sheepdog_01488.jpg'))\n",
@@ -1560,45 +1635,6 @@
     "\n",
     "\n",
     "### (IMPLEMENTATION) Write your Algorithm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### TODO: Write your algorithm.\n",
-    "### Feel free to use as many code cells as needed.\n",
-    "\n",
-    "def run_app(img_path):\n",
-    "    ## handle cases for a human face, dog, and neither\n",
-    "    if face_detector(img_path):\n",
-    "        print(f'Hello human!\\nYou look like a {predict_breed_transfer(img_path)}')\n",
-    "    elif dog_detector(img_path):\n",
-    "        print(f'Hello dog!\\nYou are a {predict_breed_transfer(img_path)}')\n",
-    "    else:\n",
-    "        print('There is neither a human nor a dog in this picture!')\n",
-    "    img = plt.imread(img_path, 3)\n",
-    "    plt.imshow(img)\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "<a id='step6'></a>\n",
-    "## Step 6: Test Your Algorithm\n",
-    "\n",
-    "In this section, you will take your new algorithm for a spin!  What kind of dog does the algorithm think that _you_ look like?  If you have a dog, does it predict your dog's breed accurately?  If you have a cat, does it mistakenly think that your cat is a dog?\n",
-    "\n",
-    "### (IMPLEMENTATION) Test Your Algorithm on Sample Images!\n",
-    "\n",
-    "Test your algorithm at least six images on your computer.  Feel free to use any images you like.  Use at least two human and two dog images.  \n",
-    "\n",
-    "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm."
    ]
   },
   {
@@ -1995,6 +2031,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
